text colors fixed, imac logo bottom gap removed

--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,6 @@ body {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  height: 408px;
   width: 200px;
   background: #fff;
   border: 1px solid #f3f3f3;
@@ -21,6 +20,7 @@ body {
 
 .product-logo {
   margin: 32px auto 0;
+  display: flex;
 }
 
 .product-logo__image {
@@ -33,12 +33,14 @@ body {
   font-weight: 500;
   padding: 40px 16px 0;
   line-height: 18px;
+  color: #060b35;
 }
 
 .product-code {
   font-size: 10px;
   line-height: 14px;
   margin: 4px auto 0 16px;
+  color: #616070;
 }
 
 .ratings {
@@ -49,7 +51,6 @@ body {
 
 .stars {
   display: flex;
-  /* width: min-content; */
 }
 
 .stars__star {
@@ -69,6 +70,7 @@ body {
   align-items: center;
   font-size: 10px;
   line-height: 14px;
+  color: #060b35;
 }
 
 .price {
@@ -82,11 +84,13 @@ body {
   align-items: center;
   font-size: 12px;
   line-height: 18px;
+  color: #616070;
 }
 
 .price__value {
   font-weight: 700;
   font-size: 16px;
+  color: #060b35;
 }
 
 .buy-button {
